# in_silico_framework_hot_zone

./: .gitattributes  .gitignore  .~Untitled.ipynb  500_GP_WR639_cell_1547_SP5C_checked_RE.ASC  CODE_OF_CONDUCT.md  CONTRIBUTE.md  Copy_items_from_old_to_new.ipynb  Copy_items_from_old_to_new.py  Interface.py  LICENSE.md  README.md  Requirements.ipynb  Untitled-Copy1.ipynb  Untitled.ipynb  barrel_cortex.py  clustercontrol.py  compatibility.py  dask-scheduler-no-workstealing.py  dask_scheduler.txt  demo.ipynb  demo_google_colab.ipynb  distributed.yaml  dump.rdb  environment.yml  getting_started.ipynb  log  nbrun.py  pyproject.toml  run_tests.py  tall
.github/: archive_branch.sh  codecov.yml
.ipynb_checkpoints/: Untitled-Copy1-checkpoint.ipynb  Untitled-checkpoint.ipynb
Installer/: isf-install.sh
Interface/: __init__.py
MOEA_EH_model_visualization/: L5PC_target_step_0.txt  L5PC_target_step_3.txt  L5PC_target_step_5.txt  MOEA_celltype_generator.hoc  MOEA_config_feature_object.hoc  MOEA_config_parameter_object.hoc  MOEA_config_stimulus_object.hoc  MOEA_creator_v2.hoc  MOEA_creator_v2.hoc~  MOEA_distance_calculator.hoc  MOEA_distance_calculator.hoc~  MOEA_distance_calculator_no_abs.hoc  MOEA_evaluator.hoc  MOEA_evaluator.hoc~  MOEA_gui.hoc  MOEA_gui_for_objective_calculation.hoc  MOEA_gui_v2.hoc~  MOEA_organism.hoc  MOEA_parallel_ga.hoc  MOEA_parallel_ga.hoc~  MOEA_parser_functions.hoc  MOEA_reporter.hoc  NEURON_naming_converter.py  Overview.xlsx  Trajectory_density_calculator.hoc  fit_config.hoc  fit_config.hoc_TEST  fit_config.hoc~  fit_config_84_CDK20050929_BAC_arco_run1.hoc  fit_config_84_CDK20050929_BAC_run1.hoc  fit_config_84_CDK20050929_BAC_run2.hoc  fit_config_84_CDK20050929_BAC_run3.hoc  fit_config_84_CDK20050929_BAC_run4.hoc  fit_config_85_CDK20041206_BAC_run1.hoc  fit_config_85_CDK20041206_BAC_run1_arco.hoc  fit_config_85_CDK20041206_BAC_run2.hoc  fit_config_86_CDK20041214_BAC_run1.hoc  fit_config_86_CDK20041214_BAC_run1.hoc~  fit_config_86_CDK20041214_BAC_run10.hoc  fit_config_86_CDK20041214_BAC_run2.hoc  (+33 more)
SLURM_scripts/: __init__.py  clustercontrol.py  component_1.py  component_1_SOMA.py  component_1_special.py  component_isf.py  jupyter_link.sh  launch_dask_on_AXON_cpu_01.sh  launch_dask_on_AXON_cpu_04.sh  launch_dask_on_AXON_cpu_06.sh  launch_dask_on_AXON_cpu_12.sh  launch_dask_on_AXON_cpu_isf3.sh  launch_dask_on_AXON_gpu_01.sh  launch_dask_on_AXON_gpu_03.sh  launch_dask_on_AXON_gpu_04.sh  launch_dask_on_AXON_gpu_07.sh  launch_dask_on_AXON_gpu_14.sh  launch_dask_on_SOMA_a100_interactive_1.sh  launch_dask_on_SOMA_cpu_1.sh  launch_dask_on_SOMA_cpu_25.sh  launch_dask_on_SOMA_cpu_interactive_1.sh  launch_dask_on_SOMA_cpu_isf3.sh  launch_dask_on_SOMA_cpu_long_1.sh  launch_dask_on_SOMA_gpu_01.sh  launch_dask_on_SOMA_gpu_01_special.sh  launch_dask_on_SOMA_gpu_1.sh  launch_dask_on_SOMA_gpu_1_ej.sh  launch_dask_on_SOMA_gpu_25.sh  launch_dask_on_SOMA_gpu_interactive_1.sh  launch_dask_on_SOMA_gpu_long_1.sh  nbrun.py  setup_SLURM.py  setup_dask.py  setup_dask_workers.py  setup_jupyter_server.py  setup_locking_server.py  submit.sh  user_settings.ini  utils.py
Tests/: run_tests.py
barrel_cortex/: ConnectionsV8.csv  README.md  __init__.py  average_barrel_field_L45_border.am  nrCells.csv
biophysics_fitting/: L5tt_parameter_setup.py  README.md  __init__.py  combiner.py  ephys.py  evaluator.py  hay_complete_default_setup.py  hay_complete_default_setup_python.py  hay_evaluation.py  hay_evaluation_python.py  hay_objectives_empirical.json  hay_specification.py  model_selection.py  optimizer.py  parameters.py  setup_stim.py  simulator.py  utils.py
cluster/: clustercontrol.py  launch_dask_on_AXON_cpu_01.sh  launch_dask_on_AXON_cpu_isf3.sh  launch_dask_on_SOMA_cpu_1.sh  launch_dask_on_SOMA_gpu_1.sh  launch_dask_on_SOMA_gpu_long_1.sh  submit.sh
compatibility/: __init__ copy.py  __init__.py  module_compatibility.py  module_registration.py
config/: README.md  __init__.py  bashrc.sh  bashrc_example.sh  cell_types.py  dask_config.yml  distributed.yaml  file_locking.py  isf_logging.py  port_numbers.ini  user_settings.ini
data_base/: __init__.py  _module_versions.py  _version.py  data_base.py  data_base_register.py  dbopen.py  distributed_lock.py  exceptions.py  settings.py  utils.py
dendrite_thickness/: README.md  __init__.py
docs/: README.md  api_reference.rst  bibliography.bib  conf.py  file_formats.rst  index.rst  installation.rst  modules.rst  nodoc.py  overview.html  paramfile_overview.rst  parse_notebooks.py  single_cell_parser.rst  skip_doc.py  sphinx_hooks.py  tests.test_biophysics_fitting.rst  tutorials.rst
etc/: README.md  env-isf-py27-pip.yml  env-isf-py27.yml  env-isf-py3.yml  env-nrn-py27.yml  isf-py27-spec.txt
getting_started/: 00_install_and_setup.ipynb  02_synaptic_simulation.ipynb  Installation of NEURON with Python.rtf  Introduction_to_ISF.ipynb  README.md  SetupDaskClient.ipynb  __init__.py  apical_proximal_distal_rec_sites.landmarkAscii  dbcore.pickle  getting_started.ipynb  install_and_setup.ipynb  metadata.db  sqlitedict.db
getting_started_files/: 86_CDK_20041214_BAC_run5_soma_Hay2013_C2center_apic_rec.param
htmlcov/: Interface_py.html  getting_started___init___py.html  index.html  mechanisms___init___py.html  model_data_base_IO_LoaderDumper___init___py.html  model_data_base_IO_LoaderDumper_cell_py.html  model_data_base_IO_LoaderDumper_dask_to_categorized_msgpack_py.html  model_data_base_IO_LoaderDumper_dask_to_csv_py.html  model_data_base_IO_LoaderDumper_dask_to_msgpack_py.html  model_data_base_IO_LoaderDumper_just_create_folder_py.html  model_data_base_IO_LoaderDumper_just_create_mdb_py.html  model_data_base_IO_LoaderDumper_numpy_to_npy_py.html  model_data_base_IO_LoaderDumper_pandas_to_msgpack_py.html  model_data_base_IO_LoaderDumper_pandas_to_pickle_py.html  model_data_base_IO_LoaderDumper_parent_classes_py.html  model_data_base_IO_LoaderDumper_to_cloudpickle_py.html  model_data_base_IO_LoaderDumper_to_pickle_py.html  model_data_base_IO___init___py.html  model_data_base_IO_dask_wrappers_py.html  model_data_base_IO_filelist_py.html  (+121 more)
(+8516 files in other folders)
