[project]
authors = [{name = "Bjorge Meulemeester", email = "bjorge.meulemeester@mpinb.mpg.de"}]
dependencies = [
  "bluepyopt==1.9.126", 
  "sumatra==0.7.4", 
  "tables>=3.8.0,<4", 
  "redis>=5.2.0,<6", 
  "pyarrow==12.0.1", 
  "blosc>=1.11.1,<2", 
  "pandas-msgpack @ https://github.com/abast/pandas-msgpack.git"
]
description = "Add a short description here"
name = "in_silico_framework"
requires-python = ">=3.8, <3.10"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
linux = "3.10"
libc = "2.17"

[tool.pixi.dependencies]
pandas = "1.1.3.*"
numpy = "1.19.2.*"
distributed = "2.30.0.*"
dask = "2.30.0.*"
flask = "1.1.4.*"
markupsafe = "2.0.1.*"
neuron = "7.8.2.*"
scikit-learn = "0.23.2.*"
simpleitk = ">=2.4.0,<3"
pypdf2 = ">=3.0.1,<4"
mock = ">=5.1.0,<6"
scandir = ">=1.10.0,<2"
kazoo = ">=2.10.0,<3"
scipy = "1.5.2.*"
matplotlib = ">=3.3.2,<4"
python = "3.8.*"
seaborn = ">=0.12.2,<0.13"
pyyaml = "==5.3.1"
plotly = ">=5.24.1,<6"
cython = ">=3.0.11,<4"
pytest = ">=8.3.3,<9"
pytest-xdist = ">=3.6.1,<4"
wheel = ">=0.45.1,<0.46"
dash = ">=2.18.1,<3"
pytest-cov = ">=5.0.0,<6"
fasteners = ">=0.17.3,<0.18"
jupyterlab = ">=3.5.3,<4"
jupyter-scatter = ">=0.19.1,<0.20"
cmasher = ">=1.6.3,<2"
ipywidgets = ">=8.1.5,<9"

[tool.pixi.pypi-options]
no-build-isolation = ["pandas-msgpack"]

[tool.pixi.tasks]
launch_dask_server = {cmd = [
  "dask-scheduler", 
  "--port=$ISF_DASK_PORT", 
  "--bokeh-port=$ISF_DASK_BOKEH_PORT", 
  "--host=localhost"
  ], description = "Launch a Dask scheduler", env = {ISF_DASK_PORT = "8786", ISF_DASK_BOKEH_PORT = "8787"}, cwd="/tmp"}

launch_dask_workers = {cmd = [
  "dask-worker", 
  "localhost:$ISF_DASK_PORT", 
  "--nthreads=1", 
  "--nprocs=$ISF_NUM_DASK_WORKERS", 
  "--memory-limit=100e15", 
  "--dashboard-address=$ISF_DASK_BOKEH_PORT"
  ], description = "Launch Dask workers", env = {ISF_DASK_PORT = "8786", ISF_DASK_BOKEH_PORT = "8787", ISF_NUM_DASK_WORKERS = "4"}, cwd = "/tmp"}

launch_jupyter_server = {cmd = [
        'jupyter-lab',
        "--ip='*'",
        '--no-browser',
        '--port=$ISF_LAB_PORT',
        "--NotebookApp.allow_origin='*'"
    ], description = "Launching jupyter lab server", env = {ISF_LAB_PORT = "11113"}}

test = {cmd = [
  "pytest", 
  "-n",
  "$ISF_NUM_PYTEST_WORKERS",
  "-rsx",
  "-vv",
  "--color=yes",
  "--durations=15",
  "--cov-report",
  "xml:tests/logs/test_report.xml",
  "--cov=/tmp",
  "--dask_server_port",
  "$ISF_DASK_PORT",
  ], description = "Run test suite", env = {ISF_NUM_PYTEST_WORKERS = "5", ISF_DASK_PORT = "8786"}, cwd="tests"}